# onnx-plugin

./: CMakeLists.txt  README.md
include/: sample_ep.h
src/: sample_ep.cpp
test/: test_sample_ep.cpp
